Plugins: Fix plugin action alignment styles

--- a/client/my-sites/plugins/plugin-action/style.scss
+++ b/client/my-sites/plugins/plugin-action/style.scss
@@ -23,8 +23,21 @@
 		}
 	}
 
-	.components-toggle-control .components-base-control__field {
-		margin-bottom: 5px;
+	.components-toggle-control {
+		.components-base-control__field {
+			display: inline-block;
+			margin-bottom: 5px;
+
+			.components-form-toggle {
+				margin-right: 0;
+			}
+		}
+
+		.components-toggle-control__label {
+			float: left;
+			font-size: $font-body-small;
+			margin-right: 8px;
+		}
 	}
 }
 
